[package]
name = "houseflow-types"
version = "0.1.1"
description = "Types for Houseflow"
homepage = "https://github.com/gbaranski/houseflow"
repository = "https://github.com/gbaranski/houseflow"
keywords = ["iot", "home-automation", "smart-home"]
authors = ["Grzegorz Baranski <root@gbaranski.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex            = "0.4"
rand           = "0.8"
thiserror      = "1.0"
bytes          = "1"
semver         = { version = "1.0.3", features = ["serde"] }


strum          = { version = "0.21.0", features = ["derive"] }

serde          = { version = "1.0", features = ["derive"] }
serde_json     = { version = "1.0.64" }

rusqlite = { version = "0.25", optional = true } 

validator = { version = "0.13.0", features = ["derive"], optional = true }
chrono = { version = "0.4.19", features = ["serde"], optional = true }
url = { version = "2.2.2", features = ["serde"] }
jsonwebtoken = { version = "7.2.0", optional = true }

askama = { version = "0.10.5", optional = true }

axum_crate = { package = "axum", version = "0.2.0", optional = true }
http = { version = "0.2.4", optional = true }
http-body = { version = "0.4.2", optional = true }
hyper = { version = "0.14.11", optional = true }
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[features]
axum = ["axum_crate", "http", "http-body", "hyper"]
token          = [ "chrono", "jsonwebtoken" ]
auth           = [ "token", "validator" ]
fulfillment    = [ "token", "lighthouse" ]
lighthouse     = [ ]
