[package]
name = "houseflow-accessory-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
houseflow-types = { path = "../../types" }
async-trait = "0.1.51"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["sync"] }
