[package]
name = "houseflow-accessory-virtual"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
houseflow-api = { path = "../../api", features = ["hub-hive"] }
houseflow-config = { path = "../../config", features = ["accessory", "fs", "log"] }
houseflow-types = { path = "../../types" }
houseflow-accessory-hal = { path = "../hal" }

anyhow = "1.0.52"
tokio = { version = "1.18.4", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.29"
url = "2.2.2"
async-trait = "0.1.52"
