[package]
name = "houseflow-auth-api"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
houseflow-auth-types = { path = "../types", features = [ "serde" ] }
houseflow-token = { path = "../../token" }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = [ "json" ] }
url = "2.2"
tokio = { version = "1.6.0", features = ["sync"] }
