[package]
name = "houseflow-auth"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth-api    = { path = "../api/"   , package = "houseflow-auth-api" }
auth-types  = { path = "../types/" , package = "houseflow-auth-types" }
auth-server = { path = "../server/", package = "houseflow-auth-server" }
