[package]
name = "anyos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
async-trait = "0.1.51"
houseflow-config = { path = "../../config/" }
houseflow-device = { path = "../../device/" }
houseflow-types = { path = "../../types/" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.26"
