[package]
name = "houseflow-device-rpi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = [ "rt-multi-thread", "macros", "sync" ] }
tracing = "0.1.26"
houseflow-device = { path = "../virtual", version = "0.1.1" }
houseflow-types = { path = "../../types", version = "0.1.1", features = ["lighthouse"] }
houseflow-config = { path = "../../config", version = "0.1.1", features = [ "device" ] }
rppal = "0.12.0"
