[package]
name = "houseflow-device"
version = "0.1.1"
description = "Device for Houseflow"
homepage = "https://github.com/gbaranski/houseflow"
repository = "https://github.com/gbaranski/houseflow"
authors = ["Grzegorz Baranski <root@gbaranski.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
houseflow-types   = { path = "../../types", version = "0.1.1", features = ["lighthouse"] }
houseflow-config  = { path = "../../config", version = "0.1.1", features = [ "device" ] }

tokio             = { version = "1.5", features = [ "rt-multi-thread", "macros", "fs", "sync" ] }
bytes             = "1.0"
futures-util      = "0.3"
tokio-tungstenite = "0.14"
tungstenite       = "0.13"
http              = "0.2.4"

log               = "0.4"

anyhow            = "1.0"
url               = "2.2"
async-trait = "0.1.50"
serde = "1.0.126"
serde_json = "1.0.64"
strum = { version = "0.21.0", features = ["derive"] }
