[package]
name = "houseflow-device"
version = "0.1.1"
description = "Device for Houseflow"
homepage = "https://github.com/gbaranski/houseflow"
repository = "https://github.com/gbaranski/houseflow"
authors = ["Grzegorz Baranski <root@gbaranski.com>"]
license = "GPL-3.0-or-later"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
houseflow-types   = { path = "../../types", version = "0.1.1", features = ["lighthouse"] }
houseflow-config  = { path = "../../config", version = "0.1.1", features = [ "device" ] }

tokio             = { version = "1.5", features = [ "macros", "sync" ] }
bytes             = "1.0"
futures-util      = "0.3"
tokio-tungstenite = { version = "0.14", features = ["rustls-tls"] }
tungstenite       = { version = "0.13", features = ["rustls-tls"] }
http              = "0.2.4"

anyhow            = "1.0"
url               = "2.2"
async-trait = "0.1.50"
serde = "1.0.126"
serde_json = "1.0.64"
strum = { version = "0.21.0", features = ["derive"] }
tracing = "0.1.26"

[dev-dependencies]
tokio = { version = "1.5", features = [ "rt-multi-thread", "macros", "sync" ] }
houseflow-config = { path="../../config", version="0.1.1", features=["device", "fs"] }
tracing-subscriber = "0.2.19"


[[example]]
name = "light"
