[package]
name = "houseflow-fulfillment-api"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth-api           = { path = "../../auth/api", package = "houseflow-auth-api" }
types              = { path = "../../types"   , package = "houseflow-types" }
fulfillment-types  = { path = "../types"      , package = "houseflow-fulfillment-types" }
token              = { path = "../../token"   , package = "houseflow-token" }

reqwest            = { version = "0.11", features = [ "json" ] }
serde              = { version = "1.0" , features = [ "derive"] }
serde_json         = "1.0"
thiserror          = "1.0.25"
url                = "2.2"

