[package]
name = "houseflow-fulfillment-api"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types              = { path = "../../types"   , package = "houseflow-types" }
fulfillment-types  = { path = "../types"      , package = "houseflow-fulfillment-types" }
token              = { path = "../../token"   , package = "houseflow-token" }
config             = { path = "../../config"  , package = "houseflow-config", features = [ "server" ] }

reqwest            = { version = "0.11", features = [ "json" ] }
serde              = { version = "1.0" , features = [ "derive"] }
serde_json         = "1.0"
thiserror          = "1.0.25"
url                = "2.2"

