[package]
name = "houseflow-fulfillment"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fulfillment-server = { path = "../server/", package = "houseflow-fulfillment-server" }
fulfillment-types  = { path = "../types/" , package = "houseflow-fulfillment-types" }
fulfillment-api    = { path = "../api/"   , package = "houseflow-fulfillment-api" }
