[package]
name = "houseflow-fulfillment-server"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db                = { path = "../../db"   	   , package = "houseflow-db" }
types             = { path = "../../types"	   , package = "houseflow-types" }
fulfillment-types = { path = "../types"   	   , package = "houseflow-fulfillment-types" }
lighthouse-api    = { path = "../../lighthouse/api", package = "houseflow-lighthouse-api" }
token             = { path = "../../token"         , package = "houseflow-token", features = [ "store", "actix" ] }


actix-web         =   "=4.0.0-beta.5" 
log               =   "0.4"
env_logger        =   "0.8"
serde             =   "1"
serde_json        =   "1"
thiserror         =   "1.0"

[dev-dependencies]
rand = "0.8.3"
